# io-collection

./: .buildinfo  CHANGELOG.md  Makefile  README.md  changelog.html  genindex.html  index.html  io_collection.html  io_collection.keys.change_key.html  io_collection.keys.check_key.html  io_collection.keys.check_key_exists.html  io_collection.keys.copy_key.html  io_collection.keys.get_keys.html  io_collection.keys.html  io_collection.keys.make_key.html  io_collection.keys.remove_key.html  io_collection.load.html  io_collection.load.load_buffer.html  io_collection.load.load_dataframe.html  io_collection.load.load_image.html  io_collection.load.load_pickle.html  io_collection.load.load_tar.html  io_collection.load.load_text.html  io_collection.quilt.html  io_collection.quilt.load_quilt_package.html  io_collection.quilt.save_quilt_item.html  io_collection.save.html  io_collection.save.save_buffer.html  io_collection.save.save_dataframe.html  io_collection.save.save_figure.html  io_collection.save.save_gif.html  io_collection.save.save_image.html  io_collection.save.save_json.html  io_collection.save.save_pickle.html  io_collection.save.save_tar.html  io_collection.save.save_text.html  modules.html  mypy.ini  objects.inv  py-modindex.html  (+3 more)
_coverage/: class_index.html  d_0cf5aaf4443ba2b5___init___py.html  d_0cf5aaf4443ba2b5_change_key_py.html  d_0cf5aaf4443ba2b5_check_key_py.html  d_0cf5aaf4443ba2b5_copy_key_py.html  d_0cf5aaf4443ba2b5_get_keys_py.html  d_0cf5aaf4443ba2b5_make_key_py.html  d_0cf5aaf4443ba2b5_remove_key_py.html  d_4701e386616f28a5___init___py.html  d_4701e386616f28a5___main___py.html  d_64b5674e21697291___init___py.html  d_64b5674e21697291_load_buffer_py.html  d_64b5674e21697291_load_dataframe_py.html  d_64b5674e21697291_load_image_py.html  d_64b5674e21697291_load_json_py.html  d_64b5674e21697291_load_pickle_py.html  d_64b5674e21697291_load_tar_py.html  d_64b5674e21697291_load_text_py.html  d_6d84a50f57760eb6___init___py.html  d_6d84a50f57760eb6_load_quilt_package_py.html  d_6d84a50f57760eb6_save_quilt_item_py.html  d_bc20a1a1a6c1d507___init___py.html  d_bc20a1a1a6c1d507_save_buffer_py.html  d_bc20a1a1a6c1d507_save_dataframe_py.html  d_bc20a1a1a6c1d507_save_figure_py.html  d_bc20a1a1a6c1d507_save_gif_py.html  d_bc20a1a1a6c1d507_save_image_py.html  d_bc20a1a1a6c1d507_save_json_py.html  d_bc20a1a1a6c1d507_save_pickle_py.html  d_bc20a1a1a6c1d507_save_tar_py.html  d_bc20a1a1a6c1d507_save_text_py.html  function_index.html  index.html  status.json  z_0cf5aaf4443ba2b5___init___py.html  z_0cf5aaf4443ba2b5_change_key_py.html  z_0cf5aaf4443ba2b5_check_key_py.html  z_0cf5aaf4443ba2b5_copy_key_py.html  z_0cf5aaf4443ba2b5_get_keys_py.html  z_0cf5aaf4443ba2b5_group_keys_py.html  (+25 more)
_modules/: index.html
_sources/: io_collection.keys.change_key.rst.txt  io_collection.keys.check_key.rst.txt  io_collection.keys.check_key_exists.rst.txt  io_collection.keys.copy_key.rst.txt  io_collection.keys.get_keys.rst.txt  io_collection.keys.make_key.rst.txt  io_collection.keys.remove_key.rst.txt  io_collection.keys.rst.txt  io_collection.load.load_buffer.rst.txt  io_collection.load.load_dataframe.rst.txt  io_collection.load.load_image.rst.txt  io_collection.load.load_pickle.rst.txt  io_collection.load.load_tar.rst.txt  io_collection.load.load_text.rst.txt  io_collection.load.rst.txt  io_collection.quilt.load_quilt_package.rst.txt  io_collection.quilt.rst.txt  io_collection.quilt.save_quilt_item.rst.txt  io_collection.rst.txt  io_collection.save.rst.txt  io_collection.save.save_buffer.rst.txt  io_collection.save.save_dataframe.rst.txt  io_collection.save.save_figure.rst.txt  (+7 more)
(+148 files in other folders)
